--- a/WebApplication1/Areas/Admin/Views/Admin/Dersicerikguncelle.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Admin/Dersicerikguncelle.cshtml
@@ -26,6 +26,6 @@
     @Html.Label("Sunumun yolunu giriniz:")
     @Html.TextBoxFor(x=>x.Yol, new {@class="form-control"})
     <br />
-    <button class="btn btn-info">Güncelle</button>
+    <button type="submit" class="btn btn-info">Güncelle</button>
 }
 
