--- a/WebApplication1/Views/Shared/_ElearningLayout_icerik.cshtml
+++ b/WebApplication1/Views/Shared/_ElearningLayout_icerik.cshtml
@@ -48,6 +48,8 @@
 			<div class="search" id="search-switch">
 @*				<input type="text" placeholder="Arama..." class="srch"><button id="srchbtn"><img src="~/LearnEd_E-learning_Website-master/images/icon/search.png"></button>
 *@				<a class="get-started"  href="/User/Index/">Profilim</a>
+				<a class="get-started"  href="/Login/LogOut/">Çıkış Yap</a>
+
 			</div>
 		</div>
 	</header>
