--- a/WebApplication1/Views/User/ProfileSetting.cshtml
+++ b/WebApplication1/Views/User/ProfileSetting.cshtml
@@ -13,10 +13,10 @@
             <label for="inputPassword2" class="sr-only">Ad Soyad</label>
             <input type="text" asp-for="@Model.namesurname" class="form-control" id="inputPassword2" placeholder="Adı soyadı" value="@Model.namesurname" readonly>
         </div>
-         <div class="form-group mx-sm-3 mb-2">
+       @*  <div class="form-group mx-sm-3 mb-2">
             <label for="inputPassword2" class="sr-only">Sınıf</label>
             <input type="text" asp-for="@Model.Sinif_name" class="form-control" id="inputPassword2" placeholder="Sınıfı" value="@Model.Sinif_name" readonly>
-        </div>
+        </div>*@
          <div class="form-group mx-sm-3 mb-2">
             <label for="inputPassword2" class="sr-only">Şube</label>
             <input type="text" asp-for="@Model.sube" class="form-control" id="inputPassword2" placeholder="Şube" value="@Model.sube" readonly>
