--- a/WebApplication1/Areas/Admin/Views/Admin/PersonEdit.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Admin/PersonEdit.cshtml
@@ -10,8 +10,8 @@
 <br />
 <br />
 
-@using (Html.BeginForm("PersonEdit","Admin",FormMethod.Post))
-    {
+@using (Html.BeginForm("PersonEdit", "Admin", FormMethod.Post))
+{
 
     @Html.Label("Öğrenci id")
     @Html.TextBoxFor(x=>x.Id, new {@class="form-control" , @readonly="readonly"})
@@ -21,9 +21,13 @@
 
     @Html.Label("Öğrenci Kullanıcı Adı")
     @Html.TextBoxFor(x=>x.UserName, new {@class="form-control"})
-
-   @*@Html.Label("Öğrenci Şifre")
-    @Html.TextBoxFor(x=>x.PasswordHash, new {@class="form-control"})*@
+    <br />
+    @*@Html.Label("Öğrenci Şifre")
+        @Html.TextBoxFor(x=>x.PasswordHash, new {@class="form-control"})*@
+    <div class="form-group">
+        <span asp-validation-for="@Model.PasswordHash" class="text-danger"></span>
+        <input type="password" class="form-control" value="@Model.PasswordHash" name="PasswordHash" placeholder="Şifre" required="">
+    </div>
 
     @Html.Label("Öğrenci Şube ")
     @Html.TextBoxFor(x=>x.sube, new {@class="form-control"})
@@ -38,7 +42,7 @@
 
     <button type="submit" class="btn btn-primary">Güncelle</button>
 
-    }
+}
 
 
 
