--- a/WebApplication1/Views/Shared/UserProfileLayout.cshtml
+++ b/WebApplication1/Views/Shared/UserProfileLayout.cshtml
@@ -23,8 +23,7 @@
         <div class="sidenav-header">
             <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" href="/User/Index/" target="_blank">
-                <img src="~/soft-ui-dashboard-main/assets/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="ms-1 font-weight-bold">RoboDem</span>
+              <img src="~/resimler/erdemlogo1-removebg-preview.png" class="navbar-brand-img h-100" style="padding-left:40px; width:120px;" alt="main_logo">
             </a>
         </div>
         <hr class="horizontal dark mt-0">
@@ -129,6 +128,19 @@
                     <h6 class="font-weight-bolder mb-0">Anasayfa</h6>
                 </nav>
                 <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
+                     <ul class="navbar-nav  justify-content-end">
+                       
+                        <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
+                            <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
+                                <div class="sidenav-toggler-inner">
+                                    <i class="sidenav-toggler-line"></i>
+                                    <i class="sidenav-toggler-line"></i>
+                                    <i class="sidenav-toggler-line"></i>
+                                </div>
+                            </a>
+                        </li>
+                      
+                    </ul>
                 </div>
             </div>
         </nav>
