--- a/WebApplication1/wwwroot/soft-ui-dashboard-main/assets/css/soft-ui-dashboard.css
+++ b/WebApplication1/wwwroot/soft-ui-dashboard-main/assets/css/soft-ui-dashboard.css
@@ -22523,7 +22523,7 @@ hr.horizontal.gray-light {
 .navbar-vertical.navbar-expand-xs .navbar-collapse {
   display: block;
   overflow: auto;
-  height: calc(100vh - 360px);
+  height: 100%;
 }
 
 .navbar-vertical.navbar-expand-xs>[class*="container"] {
