--- a/WebApplication1/Areas/Admin/Views/Admin/Addicerik.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Admin/Addicerik.cshtml
@@ -13,7 +13,7 @@
                                        { enctype = "multipart/form-data" }))
 {
     @Html.Label("içerik başlığı")
-    @Html.TextBoxFor(x=>x.icerik_name, new { @class="form-control"})
+    @Html.TextBoxFor(x=>x.icerik_name, new { @class="form-control",@required="required"})
     @Html.ValidationMessageFor(x=>x.icerik_name)
     <br />
 
@@ -31,11 +31,11 @@
   
   
     @Html.Label("Sunumun yolunu giriniz:")
-    @Html.TextBoxFor(x=>x.Yol, new {@class="form-control"})
+    @Html.TextBoxFor(x=>x.Yol, new {@class="form-control",@required="required"})
     <br />
 
     @Html.Label("Ders icerik Resim Ekle")<br />
-    @Html.TextBoxFor(x=>x.image,new{@type="file"})
+    @Html.TextBoxFor(x=>x.image,new{@type="file",@required="required"})
     <br /><br />
     <button class="btn btn-info">içeriği kaydet</button>
    
